2006-08-18  Al Riddoch  <alriddoch@zepler.org>

	* NEWS: Update date on release news item.

	* Release 0.3.5

2006-08-18  Al Riddoch  <alriddoch@zepler.org>

	* autogen.sh: Get rid of non-functional --enable-compile-warnings
	  flag, and enable debug by default when invoking configure from
	  autogen.

2006-08-17  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/Makefile.am: Remove useless AM_CXXFLAGS.

	* configure.ac: Straighten out interface version numbers, remove
	  unused substitutions, and add debug compiler flag support. Increment
	  version for release.

	* NEWS: Add provisional news item for release.

2006-08-17  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/point.h, wfmath/point_funcs.h, wfmath/quaternion.cpp,
	  wfmath/quaternion.h, wfmath/vector.h, wfmath/vector_funcs.h:
	  Re-order and reimplement some of the operators, so they
	  are more efficient and in some cases cleaner.

	* wfmath/quaternion_test.cpp: Output values for the results of
	  test calculations to make them easier to debug when they fail.

2006-08-16  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/intstring_test.cpp: Switch to using atol instead of
	  atoi to ensure longs work on platforms where long is bigger
	  than int.

2006-08-04  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/quaternion.cpp: If a quaternion is initialised with values
	  which would make it normalise with division by zero, or be
	  initialised with NaN, mark as invalid and return.

	* autogen.sh: Remove references to long removed mainainer mode.

2005-12-02  James Turner  <james@worldforge.org>

	* Add X-Code 2.0 project file (ProjectBuilder project will be deleted
	  shortly).

2005-09-22  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/atlasconv.h: If a quaternion is initialised with values
	  which would make it normalise with division by zero, mark
	  as invalid and return.

2005-06-11  Al Riddoch  <alriddoch@zepler.org>

	* wfmath.spec.in: Minor changes to spec.

	* NEWS: Update NEWS.

	* Release 0.3.4
